Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.4.1, Qt Creator 4.5.0-rc1
-
None
-
macOS 10.12
-
1291755288ca11ba548cd3467dbe5b81496c541d (qt-creator/qt-creator/master)
Description
- turn warnings off in issues pane
- restart Qt Creator
Expected: Warnings are off, and button is off
Actual: Warnings are off, and button is on
Attachments
Issue Links
- resulted in
-
QTCREATORBUG-25268 Creator looses all bookmarks
-
- Reported
-
For Gerrit Dashboard: QTCREATORBUG-19388 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
271702,2 | ProjectExplorer: Fix restoring the issues pane warning button state | 4.10 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
284475,3 | Session Manager: Do not lose settings made in the default session | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |